# deco-test

dec test/: apktool.yml
dec test/unknown/me/test/contener/: ma.java
dec test/unknown/me/test/contener/helper/: am.java  dm.java  sm.java
dec test/xtest/: build.gradle  gradle.properties  local.properties  settings.gradle
dec test/xtest/app/: build.gradle  proguard-rules.pro
dec test/xtest/app/libs/: hiddenapibypass-6.0.aar  lsplt-2.1.aar  recommendpermission-release.aar
dec test/xtest/app/src/main/: AndroidManifest.xml
dec test/xtest/app/src/main/cpp/: CMakeLists.txt  container_hooks.cpp
dec test/xtest/app/src/main/java/android/content/res/: AXMLResource.java
dec test/xtest/app/src/main/java/com/container/: App.java  MainActivity.java
dec test/xtest/app/src/main/java/com/container/system/: ContainerApi.kt
dec test/xtest/app/src/main/java/com/container/system/core/: BinderHookManager.kt  ContainerEngine.kt  NativeHookManager.kt  PathMapper.kt  UniversalStubActivity.kt
dec test/xtest/app/src/main/java/com/container/utils/: AXMLPrinter.kt  AXMLResource.kt  PackageInfo.kt  PermissionHelper.java  PrefsHelper.java
dec test/xtest/app/src/main/java/diff/rednaga/: AXMLPrinter.java
dec test/xtest/gradle/wrapper/: gradle-wrapper.properties
